# sbpf-zkvm

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  rust-toolchain.toml
.beads/: issues.jsonl
.claude/: settings.local.json
bpf-tracer/: Cargo.toml
bpf-tracer/src/: lib.rs  syscalls.rs  trace.rs  transaction.rs  vm.rs
bpf-tracer/tests/: counter_program_test.rs  counter_with_accounts.rs  syscall_test.rs
cloak-mpc-prototype/: Cargo.toml  README.md
cloak-mpc-prototype/ceremony_test/keys/: proving_key.rs  verifying_key.rs
cloak-mpc-prototype/mpc-ceremony/: Cargo.toml
cloak-mpc-prototype/mpc-ceremony/src/: ceremony.rs  circuit.rs  contribution.rs  export.rs  main.rs  transcript.rs
cloak-mpc-prototype/privacy-pool/: Cargo.toml
cloak-mpc-prototype/privacy-pool-demo/: next.config.js  package-lock.json  package.json  tsconfig.json
cloak-mpc-prototype/privacy-pool-demo/app/: globals.css  layout.tsx  page.tsx
cloak-mpc-prototype/privacy-pool-wasm/: Cargo.toml  build.sh
cloak-mpc-prototype/privacy-pool-wasm/src/: lib.rs  poseidon.rs  poseidon_constants.rs
cloak-mpc-prototype/privacy-pool-wasm/tests/: export_vk.rs
cloak-mpc-prototype/privacy-pool-wasm/www/: index.html
cloak-mpc-prototype/privacy-pool/src/: circuit.rs  error.rs  lib.rs  state.rs
cloak-mpc-prototype/privacy-pool/tests/: export_vk.rs  integration_test.rs  onchain_test.rs
cloak-mpc-prototype/scripts/: test-privacy-pool.sh
docs/: DESIGN.md  PARALLEL_PROVING.md  PHASE1B_PARALLEL_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_ROADMAP.md  RECURSIVE_PROVING.md
examples/counter-program/: Cargo.toml  rust-toolchain.toml
examples/counter-program/src/: lib.rs
on-chain-verifier/: Cargo.toml
on-chain-verifier/src/: circuit_vk.rs  error.rs  lib.rs  state.rs  verifier.rs
on-chain-verifier/tests/: onchain_test.rs  verification_test.rs
prover/: Cargo.toml
prover/examples/: demo.rs
prover/src/: chunking.rs  keygen.rs  lib.rs  public_inputs.rs  witness.rs
trace-core/: Cargo.toml
trace-core/src/: lib.rs
trace-core/tests/: integration.rs
trace-exporter/: Cargo.toml
trace-exporter/src/: main.rs
wasm-prover/: .gitignore  Cargo.toml  README.md  build.sh
wasm-prover/src/: circuit.rs  interpreter.rs  keys.rs  lib.rs  prover.rs  trace.rs
wasm-prover/www/: counter.trace  demo.trace  index.html  main.js
zk-circuits/: Cargo.toml
zk-circuits/src/: chips.rs  counter.rs  lib.rs
