[workspace]
resolver = "2"
members = [
    "privacy-pool",
    "privacy-pool-wasm",
    "mpc-ceremony",
    "no-std-svm-merkle-tree",
]

# Exclude demo (it's a Next.js app, not a Rust crate)
exclude = ["privacy-pool-demo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloak-labs/cloak-mpc-prototype"

[workspace.dependencies]
# Arkworks (ZK cryptography)
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["snark", "sponge"] }

# Solana
solana-sdk = "2.1"
solana-client = "2.1"
solana-pubkey = { version = "2.1", features = ["serde"] }
pinocchio = "0.8"

# Groth16 verification on Solana
groth16-solana = "0.0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
borsh = "1.5"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Random
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

