[package]
name = "sbpf-zkvm-verifier"
version = "0.1.0"
edition = "2021"
description = "On-chain Groth16 verifier for SBPF zkVM proofs using pinocchio"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
# Enable this for native testing without BPF target
native = ["std"]
std = []

[dependencies]
# Pinocchio for efficient on-chain Solana program development
pinocchio = "0.9.2"
five8_const = "0.1.4"

# Groth16 verification (uses Solana's alt_bn128 syscalls)
groth16-solana = "0.2.0"

# For on-chain BN254 operations via syscalls
solana-bn254 = "3.1"

# Numeric operations
num-bigint = { version = "0.4", default-features = false }

[dev-dependencies]
# For testing with ark curves and Groth16 proof generation
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-std = "0.4"
ark-snark = "0.4"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# For on-chain testing (match Cloak versions)
solana-sdk = "=2.3.1"
solana-client = "2.3"
tokio = { version = "1.44", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
overflow-checks = false

