[package]
name = "wasm-prover"
version = "0.1.0"
edition = "2021"
description = "Browser-based zkVM prover for Solana BPF programs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

# Error handling in browser
console_error_panic_hook = { version = "0.1", optional = true }

# Halo2 - Using crates.io with WASM-compatible features
# CRITICAL: default-features = false to disable multicore
halo2-axiom = { version = "0.4.5", default-features = false, features = ["circuit-params"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RNG - must use js feature for WASM
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# Logging for WASM
tracing = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
