[package]
name = "zk-circuits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bpf-tracer = { path = "../bpf-tracer" }
halo2-base = { workspace = true }
halo2-ecc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
