[package]
name = "mpc-ceremony"
version = "0.1.0"
edition = "2021"
description = "MPC ceremony tool for secure Groth16 trusted setup"

[[bin]]
name = "mpc-ceremony"
path = "src/main.rs"

[dependencies]
# Groth16/Crypto
ark-groth16 = { version = "0.4.0" }
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-ff = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-relations = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4.0" }
ark-serialize = { version = "0.4.0", features = ["derive"] }
ark-std = { version = "0.4.0" }
ark-snark = { version = "0.4.0" }

# Randomness
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing for contribution verification
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"

