[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"
authors = ["Solana BPF zkVM Contributors"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"

[profile.dev]
panic = "abort"

[package.metadata.bpf]
# BPF-specific metadata
entry = "entrypoint"
